--- a/assets/adminthemes/dapper-dan/admin-theme-colours-dapper-dan.css
+++ b/assets/adminthemes/dapper-dan/admin-theme-colours-dapper-dan.css
@@ -58,7 +58,7 @@ a:hover { color: #c89906; }
 }
 
 .credits-admin {
-    color: #555555;
+    color: #7a6000;
 }
 
 /* 03: MAIN HEADERS */
