--- a/assets/adminthemes/green-arrow/admin-theme-colours-green-arrow.css
+++ b/assets/adminthemes/green-arrow/admin-theme-colours-green-arrow.css
@@ -58,7 +58,7 @@ a:hover { color: #008E3A; }
 }
 
 .credits-admin {
-    color: #006400;
+    color: #207a20;
 }
 
 /* 03: MAIN HEADERS */
