--- a/assets/adminthemes/green-phosphorus/admin-theme-colours-green-phosphorus.css
+++ b/assets/adminthemes/green-phosphorus/admin-theme-colours-green-phosphorus.css
@@ -58,7 +58,7 @@ a:hover { color: #29cc00; }
 }
 
 .credits-admin {
-    color: #146600;
+    color: #1d7700;
 }
 
 /* 03: MAIN HEADERS */
