--- a/assets/adminthemes/midnight-lime/admin-theme-colours-midnight-lime.css
+++ b/assets/adminthemes/midnight-lime/admin-theme-colours-midnight-lime.css
@@ -58,7 +58,7 @@ a:hover { color: #2ecc10; }
 }
 
 .credits-admin {
-    color: #555;
+    color: #2a7a00;
 }
 
 /* 03: MAIN HEADERS */
