--- a/assets/adminthemes/purple-rain/admin-theme-colours-purple-rain.css
+++ b/assets/adminthemes/purple-rain/admin-theme-colours-purple-rain.css
@@ -58,7 +58,7 @@ a:hover { color: #cc00cc; }
 }
 
 .credits-admin {
-    color: #666666;
+    color: #7a2a7a;
 }
 
 /* 03: MAIN HEADERS */
